Config page / "Preset details" now dynamically adapts to the size of content (i. e. label and content will no longer overlap).

--- a/assets/branch_export.css
+++ b/assets/branch_export.css
@@ -113,10 +113,8 @@ and open the template in the editor.
     min-height: 100px;
 }
 
-.selected-preset-details label
+.selected-preset-details tr td:first-child
 {
-    display: inline-block;
-    width: 70px;
     font-weight: bold;
 }
 .preset-orphaned
